--- a/readFile.html
+++ b/readFile.html
@@ -15,6 +15,7 @@ function readFileData(fileObj, callback) {
   })(fileObj);
 
   // Read in the image file as a data URL.
+  // reader.readAsArrayBuffer
   reader.readAsDataURL(fileObj);
 }
 
