--- a/crypto.html
+++ b/crypto.html
@@ -31,6 +31,8 @@ function encryptMessage() {
   console.log(cipherText.toString());
 
   console.log(decryptFileData(cipherText, password));
+
+  var pageSource = document.documentElement.outerHTML;
 }
 
 </script>
