--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Cryptome</title>
+<title>Hypervault</title>
 
 <script src="cryptojs-aes.min.js"></script>
 <script src="filesaver.js"></script>
