--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@ function doDownload() {
 </head>
 <body>
 
+  Upload example
   <form name="uploadForm">
     <input id="uploadInput" type="file" name="myFiles" onchange="getFileData();" multiple>
   </form>
 
+  Download example
   <button onclick="doDownload()">Download image</button>
 
 </body>
