Got grunt test working by copying app to test and adding dependencies in test/index.html.

--- a/yeoman/test/index.html
+++ b/yeoman/test/index.html
@@ -17,6 +17,8 @@
     </script>
 
     <!-- include source files here... -->
+    <script src="app/scripts/main.js"></script>
+    <script src="app/scripts/base64-binary.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
