--- a/yeoman/app/index.html
+++ b/yeoman/app/index.html
@@ -34,7 +34,7 @@
         <input type="password" name="password_input" id="password_input" placeholder="Password">
       </p>
 
-      <button onclick="createVault()">Encrypt</button>
+      <button class="btn" onclick="createVault()">Encrypt</button>
     </div>
 
 
