Changed cryptojs repos and started code to copy over bower_componenets to test/.

--- a/app/index.html
+++ b/app/index.html
@@ -38,11 +38,11 @@
     </div>
 
 
-    <script src="bower_components/crypto.js/components/aes.js"></script>
+    <script src="bower_components/cryptojslib/rollups/aes.js"></script>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="bower_components/crypto.js/core.js"></script>
     <script src="bower_components/FileSaver/FileSaver.js"></script>
+    <script src="bower_components/cryptojslib/**/*.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
