--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,7 @@
     <!-- include source files here... -->
     <script src="app/scripts/main.js"></script>
     <script src="app/scripts/base64-binary.js"></script>
+    <script src="app_bower_components/cryptojslib/components/enc-base64.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
