Added SJCL and added some tests to verify my understanding of how it works. More pending.

--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/FileSaver/FileSaver.js"></script>
-    <script src="bower_components/cryptojslib/**/*.js"></script>
+    <script src="bower_components/sjcl/sjcl.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
