Got triplesec integrated and working. It appears to be fast enough to be useable. I think this is probably the crypto library to go forward with.

--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
     <!-- bower:js -->
     <script src="bower_components/FileSaver/FileSaver.js"></script>
     <script src="bower_components/sjcl/sjcl.js"></script>
+    <script src="bower_components/triplesec/browser/triplesec.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
