--- a/test/index.html
+++ b/test/index.html
@@ -8,7 +8,9 @@
 <body>
     <div id="mocha"></div>
     <script src="bower_components/mocha/mocha.js"></script>
-    <script>mocha.setup('bdd')</script>
+    <script>
+    mocha.setup('bdd');
+    </script>
     <script src="bower_components/chai/chai.js"></script>
     <script>
         var assert = chai.assert;
@@ -17,13 +19,17 @@
     </script>
 
     <!-- include source files here... -->
+    <script src="app/bower_components/triplesec/browser/triplesec.js"></script>
     <script src="app/scripts/base64-binary.js"></script>
-    <script src="bower_components_app/triplesec/browser/triplesec.js"></script>
     <script src="app/scripts/main.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
 
-    <script>mocha.run()</script>
+    <script>
+    if (navigator.userAgent.indexOf('PhantomJS') < 0) {
+      mocha.run()
+    }
+    </script>
 </body>
 </html>
