Got almost everything working to embed the scripts and styles, both for index.html adn vault.html

--- a/test/index.html
+++ b/test/index.html
@@ -32,6 +32,7 @@
     <script src="bower_components_app/triplesec/browser/triplesec.js"></script>
     <script src="app/scripts/base64-binary.js"></script>
     <script src="app/scripts/main.js"></script>
+    <script src="app/scripts/vault.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/test.js"></script>
