--- a/app/index.html
+++ b/app/index.html
@@ -2,11 +2,10 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>hypervault</title>
+    <title>Hypervault</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <!-- endbower -->
@@ -19,7 +18,6 @@
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
 
     <div id="container">
       <p id="title">Hypervault</p>
@@ -36,7 +34,6 @@
 
       <button class="btn" onclick="createVault()">Encrypt</button>
     </div>
-
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
