Removed spin.js stuff, getting ready to add custom progress indicator.

--- a/app/index.html
+++ b/app/index.html
@@ -45,8 +45,10 @@
               <input type="password" name="password_input" id="password_input" placeholder="Password">
             </div>
             <div class="row">
-              <button class="btn" onclick="createVault()">Encrypt</button>
-            </div class="row">
+              <div class="col c12">
+                <button class="btn" onclick="createVault()">Encrypt</button>
+              </div>
+            </div>
           </div>
         </div>
         <div class="col c2">&nbsp;</div>
