Added progress messages

--- a/app/index.html
+++ b/app/index.html
@@ -49,12 +49,16 @@
                 <button class="btn" onclick="createVault()">Encrypt</button>
               </div>
             </div>
+            <div class="row">
+              <div id="progress-summary"></div>
+            </div>
           </div>
         </div>
         <div class="col c2">&nbsp;</div>
       </div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/FileSaver/FileSaver.js"></script>
