--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,16 @@
             <div class="row">
               <div class="col c12">
                 <button class="btn" onclick="createVault()">Encrypt</button>
+                <div class="progress">
+                  <div class="percent" id="percent"></div>
+                  <svg class="progress-circle" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" class="svg-content">
+                    <path d="
+                    M50,1
+                    a49,49 0 0,1 0,98
+                    a49,49 0 0,1 0,-98
+                    "/>
+                  </svg>
+                </div>
               </div>
             </div>
             <div class="row">
