--- a/app/vault.html
+++ b/app/vault.html
@@ -38,8 +38,23 @@
               <input type="password" name="password_input" id="password_input" placeholder="Password">
             </div>
             <div class="row">
+              <div class="col c12">
               <button class="btn" onclick="decryptAndDownload()">Decrypt</button>
-            </div class="row">
+                <div class="progress">
+                  <div class="percent" id="percent"></div>
+                  <svg class="progress-circle" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" class="svg-content">
+                    <path d="
+                    M50,1
+                    a49,49 0 0,1 0,98
+                    a49,49 0 0,1 0,-98
+                    "/>
+                  </svg>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div id="progress-summary"></div>
+            </div>
           </div>
         </div>
         <div class="col c2">&nbsp;</div>
