--- a/app/index.html
+++ b/app/index.html
@@ -1,85 +1,99 @@
 <!doctype html>
 <html class="no-js">
-  <head>
-    <meta charset="utf-8">
-    <title>Hypervault</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
+<head>
+<meta charset="utf-8">
+<title>Hypervault</title>
+<meta name="description" content="">
+<meta name="viewport" content="width=device-width">
+<link rel="shortcut icon" href="/favicon.ico">
+<!-- build:css(.) styles/vendor.css -->
+<!-- bower:css -->
+<!-- endbower -->
+<!-- endbuild -->
 
-    <!-- build:css(.tmp) styles/maincss-grid.css -->
-    <link rel="stylesheet" href="styles/mincss-grid.css">
-    <!-- endbuild -->
+<!-- build:css(.tmp) styles/maincss-grid.css -->
+<link rel="stylesheet" href="styles/mincss-grid.css">
+<!-- endbuild -->
 
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
-  </head>
-  <body>
-    <!--[if lt IE 10]>
+<!-- build:css(.tmp) styles/main.css -->
+<link rel="stylesheet" href="styles/main.css">
+<!-- endbuild -->
+</head>
+<body>
+<!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="container">
+<div class="outer">
+<div class="container" id="container">
+  <div class="row">
+    <div class="col c12">
+      <h1 id="title">Hypervault</h1>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col c6">
+      <form name="uploadForm">
+        <div id="dropzone">
+          <input id="uploadInput" type="file" name="myFiles" onchange="getFileData();" multiple>
+        </div>
+        <div id="filelist"></div>
+      </form>
+    </div>
+    <div class="col c1">&nbsp;</div>
+    <div class="col c5">
       <div class="row">
-        <div class="col c2">&nbsp;</div>
-        <div class="col c8">
-          <div class="row" id="container">
-            <div class="row">
-              <div class="col c12">
-                <h1 id="title">Hypervault</h1>
-              </div>
-            </div>
+        <div class="c12">
+          <input type="password" name="password_input" id="password_input" placeholder="Password">
+        </div>
+        <div class="row">
+          <div class="c12">
+            <input type="password" name="password_input2" id="password_input2" placeholder="Retype Password">
+          </div>
+        </div>
+        <div class="row">
+          <div class="c12">
 
-            <div class="row">
-              <form name="uploadForm">
-                <div id="dropzone">
-                  <input id="uploadInput" type="file" name="myFiles" onchange="getFileData();" multiple>
-                </div>
-                <div id="filelist"></div>
-              </form>
-            </div>
-
-            <div class="row">
-              <input type="password" name="password_input" id="password_input" placeholder="Password">
-            </div>
-            <div class="row">
-              <div class="col c12">
-                <button class="btn" onclick="createVault()">Encrypt</button>
-                <div class="progress">
-                  <div class="percent" id="percent"></div>
-                  <svg class="progress-circle" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" class="svg-content">
-                    <path d="
-                    M50,1
-                    a49,49 0 0,1 0,98
-                    a49,49 0 0,1 0,-98
-                    "/>
-                  </svg>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div id="progress-summary"></div>
+            <button type="button" class="btn" onclick="createVault();return false;">Encrypt</button>
+            <div class="progress">
+              <div class="percent" id="percent"></div>
+              <svg class="progress-circle" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" class="svg-content">
+                <path d="
+                M50,1
+                a49,49 0 0,1 0,98
+                a49,49 0 0,1 0,-98
+                "/>
+              </svg>
             </div>
           </div>
         </div>
-        <div class="col c2">&nbsp;</div>
       </div>
     </div>
+  </div>
 
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/FileSaver/FileSaver.js"></script>
-    <script src="bower_components/triplesec/browser/triplesec.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
+  <div class="row">
+  </div>
+  <div class="row">
+    <div class="col c12">
+    </div>
+  </div>
+  <div class="row">
+    <div id="progress-summary"></div>
+  </div>
+</div>
+</div>
+</div>
 
-    <!-- build:js({app,.tmp}) scripts/main.js -->
-    <script src="scripts/main.js"></script>
-    <!-- endbuild -->
+<!-- build:js(.) scripts/vendor.js -->
+<!-- bower:js -->
+<script src="bower_components/FileSaver/FileSaver.js"></script>
+<script src="bower_components/triplesec/browser/triplesec.js"></script>
+<!-- endbower -->
+<!-- endbuild -->
+
+<!-- build:js({app,.tmp}) scripts/main.js -->
+<script src="scripts/main.js"></script>
+<!-- endbuild -->
 </body>
 </html>
