Unified main.js and vault.js, and removed vault.js. Also fixed 85% bug for decryption.

--- a/app/vault.html
+++ b/app/vault.html
@@ -68,8 +68,8 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- build:js({app,.tmp}) scripts/vault.js -->
-    <script src="scripts/vault.js"></script>
+    <!-- build:js({app,.tmp}) scripts/main.js -->
+    <script src="scripts/main.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({app,.tmp}) scripts/base64-binary.js -->
