--- a/app/index.html
+++ b/app/index.html
@@ -32,30 +32,32 @@
     </div>
   </div>
 
+  <form name="uploadForm">
   <div class="row">
     <div class="col c6">
-      <form name="uploadForm">
-        <div id="dropzone">
-          <input id="uploadInput" type="file" name="myFiles" onchange="getFileData();" multiple>
-        </div>
-        <div id="filelist"></div>
-      </form>
+      <div id="dropzone">
+        <input id="uploadInput" type="file" name="myFiles" onchange="getFileData();" multiple>
+      </div>
+      <div id="filelist"></div>
     </div>
     <div class="col c1">&nbsp;</div>
     <div class="col c5">
       <div class="row">
         <div class="c12">
-          <input type="password" name="password_input" id="password_input" placeholder="Password">
+          <input type="password" name="password_input" id="password_input" placeholder="Password" required />
+          <span class="validation-error" id="pw-required-msg">Password required</span>
         </div>
         <div class="row">
           <div class="c12">
-            <input type="password" name="password_input2" id="password_input2" placeholder="Retype Password">
+            <input type="password" name="password_input2" id="password_input2" placeholder="Retype Password" required />
+            <span class="validation-error" id="pw-required-msg2">Password confirmation required</span>
+            <span class="validation-error" id="pw-mismatch-msg">Passwords don't match</span>
           </div>
         </div>
         <div class="row">
           <div class="c12">
 
-            <button type="button" class="btn" onclick="createVault();return false;">Encrypt</button>
+            <button type="button" class="btn" onclick="validateEncryption() && createVault();return false;">Encrypt</button>
             <div class="progress">
               <div class="percent" id="percent"></div>
               <svg class="progress-circle" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" class="svg-content">
@@ -71,6 +73,7 @@
       </div>
     </div>
   </div>
+  </form>
 
   <div class="row">
   </div>
