--- a/app/index.html
+++ b/app/index.html
@@ -45,13 +45,13 @@
       <div class="row">
         <div class="c12">
           <input type="password" name="password_input" id="password_input" placeholder="Password"
-                 onkeyup="updateEncryptionFieldValidation(this)" data-touched="false" />
+          onkeyup="validateEncryptionFields()" />
           <span class="validation-error" id="pw-required-msg">Password required</span>
         </div>
         <div class="row">
           <div class="c12">
             <input type="password" name="password_input2" id="password_input2" placeholder="Retype Password"
-                   onkeyup="updateEncryptionFieldValidation(this)" data-touched="false" />
+            onkeyup="validateEncryptionFields()" />
             <span class="validation-error" id="pw-required-msg2">Password confirmation required</span>
             <span class="validation-error" id="pw-mismatch-msg">Passwords don't match</span>
           </div>
