--- a/app/vault.html
+++ b/app/vault.html
@@ -23,43 +23,41 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="container">
-      <div class="row">
-        <div class="col c2">&nbsp;</div>
-        <div class="col c8">
-          <div class="row" id="container">
-            <div class="row">
-              <div class="col c12">
-                <h1 id="title">Hypervault</h1>
-              </div>
-            </div>
+<div class="outer">
+<div class="container" id="container">
 
-            <div class="row">
-              <input type="password" name="password_input" id="password_input" placeholder="Password">
-            </div>
-            <div class="row">
-              <div class="col c12">
-              <button class="btn" onclick="decryptAndDownload()">Decrypt</button>
-                <div class="progress">
-                  <div class="percent" id="percent"></div>
-                  <svg class="progress-circle" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" class="svg-content">
-                    <path d="
-                    M50,1
-                    a49,49 0 0,1 0,98
-                    a49,49 0 0,1 0,-98
-                    "/>
-                  </svg>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-              <div id="progress-summary"></div>
-            </div>
-          </div>
-        </div>
-        <div class="col c2">&nbsp;</div>
+  <div class="row">
+    <div class="col c12">
+      <h1 id="title">Hypervault</h1>
+    </div>
+  </div>
+
+  <div class="row">
+    <input type="password" name="password_input" id="password_input" placeholder="Password">
+  </div>
+
+  <div class="row">
+    <div class="col c12">
+      <button class="btn" onclick="decryptAndDownload()">Decrypt</button>
+      <div class="progress">
+        <div class="percent" id="percent"></div>
+        <svg class="progress-circle" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" class="svg-content">
+          <path d="
+          M50,1
+          a49,49 0 0,1 0,98
+          a49,49 0 0,1 0,-98
+          "/>
+        </svg>
       </div>
     </div>
+  </div>
+
+  <div class="row">
+    <div id="progress-summary"></div>
+  </div>
+
+</div>
+</div>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
