--- a/app/vault.html
+++ b/app/vault.html
@@ -17,6 +17,10 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+
+    <script>
+      var decryptionMode = true;
+    </script>
   </head>
   <body>
     <!--[if lt IE 10]>
@@ -33,12 +37,14 @@
   </div>
 
   <div class="row">
-    <input type="password" name="password_input" id="password_input" placeholder="Password">
+    <input type="password" name="decrypt_password_input" id="decrypt_password_input" placeholder="Password">
+    <span class="validation-error" id="decrypt-pw-required-msg">Password required</span>
+    <span class="validation-error" id="wrong-pw-msg">Wrong password</span>
   </div>
 
   <div class="row">
     <div class="col c12">
-      <button class="btn" onclick="decryptAndDownload()">Decrypt</button>
+      <button class="btn" onclick="validateDecryptionFields() && decryptAndDownload();return false;">Decrypt</button>
       <div class="progress">
         <div class="percent" id="percent"></div>
         <svg class="progress-circle" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" class="svg-content">
