--- a/app/index.html
+++ b/app/index.html
@@ -25,11 +25,11 @@
     <![endif]-->
 
 <div class="outer">
-<div class="container" id="container">
+<div class="container">
 
   <div class="row">
     <div class="col c12">
-      <h1 id="title">Hypervault</h1>
+      <h1 class="title">Hypervault</h1>
     </div>
   </div>
 
@@ -68,7 +68,7 @@
           <div class="c12">
             <button type="button" class="btn" onclick="validateEncryptionFields() && createVault();return false;">Encrypt</button>
             <div class="progress">
-              <div class="percent" id="percent"></div>
+              <div class="percent" id="encrypt-percent"></div>
               <svg class="progress-circle" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" class="svg-content">
                 <path d="
                 M50,1
@@ -88,7 +88,7 @@
   </form>
 
   <div class="row">
-    <div id="progress-summary"></div>
+    <div id="encrypt-progress-summary"></div>
   </div>
 
 </div>
