--- a/app/vault.html
+++ b/app/vault.html
@@ -19,7 +19,7 @@
     <!-- endbuild -->
 
     <script>
-      var decryptionMode = true;
+      var _decryptionMode = true;
     </script>
   </head>
   <body>
@@ -28,25 +28,25 @@
     <![endif]-->
 
 <div class="outer">
-<div class="container" id="container">
+<div class="container">
 
   <div class="row">
     <div class="col c12">
-      <h1 id="title">Hypervault</h1>
+      <h1 class="title">Hypervault</h1>
     </div>
   </div>
 
   <div class="row">
-    <input type="password" name="decrypt_password_input" id="decrypt_password_input" placeholder="Password">
+    <input type="password" name="decrypt-password-input" id="decrypt-password-input" placeholder="Password">
     <span class="validation-error" id="decrypt-pw-required-msg">Password required</span>
     <span class="validation-error" id="wrong-pw-msg">Wrong password</span>
   </div>
 
   <div class="row">
     <div class="col c12">
-      <button class="btn" onclick="validateDecryptionFields() && decryptAndDownload();return false;">Decrypt</button>
+      <button class="btn" onclick="decryptAndDownload();return false;">Decrypt</button>
       <div class="progress">
-        <div class="percent" id="percent"></div>
+        <div class="percent" id="decrypt-percent"></div>
         <svg class="progress-circle" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" class="svg-content">
           <path d="
           M50,1
@@ -59,7 +59,7 @@
   </div>
 
   <div class="row">
-    <div id="progress-summary"></div>
+    <div id="decrypt-progress-summary"></div>
   </div>
 
 </div>
