--- a/app/vault.html
+++ b/app/vault.html
@@ -28,7 +28,7 @@
     <![endif]-->
 
 <div class="outer">
-<div class="container">
+<div class="container decryption-container">
 
   <div class="row">
     <div class="col c12">
