--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
                 <div class="progress">
                   <div class="percent" id="encrypt-percent"></div>
                   <svg class="progress-circle" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" class="svg-content">
-                    <path d="
+                    <path id="encrypt-progress-path" d="
                     M50,1
                     a49,49 0 0,1 0,98
                     a49,49 0 0,1 0,-98
@@ -88,7 +88,11 @@
     </form>
 
     <div class="row">
-      <div id="encrypt-progress-summary"></div>
+      <div class="col c7">&nbsp;</div>
+
+      <div class="col c5">
+        <div id="encrypt-progress-summary"></div>
+      </div>
     </div>
 
   </div>
@@ -113,7 +117,7 @@
         <div class="progress">
           <div class="percent" id="decrypt-percent"></div>
           <svg class="progress-circle" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" class="svg-content">
-            <path d="
+            <path id="decrypt-progress-path" d="
             M50,1
             a49,49 0 0,1 0,98
             a49,49 0 0,1 0,-98
