--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <![endif]-->
 
 <div class="outer">
-  <div class="container encryption-container">
+  <div id="mainContainer" class="container encryption-container">
 
     <div class="row">
       <div class="col c12">
@@ -37,16 +37,38 @@
 
       <div class="row">
 
-        <div class="col c6">
+        <div class="col c7">
+
           <div id="dropzone">
-            <input id="uploadInput" type="file" name="myFiles" onchange="getFileData();" multiple>
+            <!--<input id="uploadInput" type="file" name="myFiles" onchange="getFileData();" multiple>-->
+
+              <div class="row">
+                  <div class="col c12">
+                      <div style="text-align:center;">
+                          <br />
+                          <label for="uploadInput">
+                            <button type="button" class="btn" id="selectFilesButton" onclick="document.getElementById('uploadInput').click();">Select Files</button>
+                            <input type="file" id="uploadInput" style="visibility:hidden; width:0px; height: 0px;" multiple accept>
+                          </label>
+
+                      </div>
+                  </div>
+
+              </div>
+              <div class="row">
+                  <div class="">
+                      <p class="thinRed" id="dragAndDropHere">(or drag and drop here)</p>
+                  </div>
+              </div>
+
+
           </div>
           <div id="filelist"></div>
         </div>
 
         <div class="col c1">&nbsp;</div>
 
-        <div class="col c5">
+        <div class="col c4">
 
           <div class="row">
             <div class="c12">
@@ -66,7 +88,7 @@
 
             <div class="row">
               <div class="c12">
-                <button type="button" class="btn" onclick="validateEncryptionFields() && createVault();return false;">Encrypt</button>
+                <button type="button" class="btn floatLeft" onclick="validateEncryptionFields() && createVault();return false;">Encrypt</button>
                 <div class="progress">
                   <div class="percent" id="encrypt-percent"></div>
                   <svg class="progress-circle" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" class="svg-content">
@@ -113,7 +135,7 @@
 
     <div class="row">
       <div class="col c12">
-        <button class="btn" onclick="decryptAndDownload();return false;">Decrypt</button>
+        <button class="btn floatLeft" onclick="decryptAndDownload();return false;">Decrypt</button>
         <div class="progress">
           <div class="percent" id="decrypt-percent"></div>
           <svg class="progress-circle" width="100%" height="100%" viewBox="0 0 100 100" preserveAspectRatio="xMinYMin meet" class="svg-content">
