Drag and drop and select files with new styling works. For some reason, files already in list are not being matched and are being duplicated in the list.

--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
                           <br />
                           <label for="uploadInput">
                             <button type="button" class="btn" id="selectFilesButton" onclick="document.getElementById('uploadInput').click();">Select Files</button>
-                            <input type="file" id="uploadInput" style="visibility:hidden; width:0px; height: 0px;" multiple accept>
+                            <input type="file" id="uploadInput" style="visibility:hidden; width:0px; height: 0px;" onchange="addSelectedFiles();" multiple accept>
                           </label>
 
                       </div>
