Removed bug causing the locked vault to not contain a boarder.

--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
     <![endif]-->
 
 <div class="outer">
-  <div id="mainContainer" class="container encryption-container">
+  <div class="container encryption-container">
 
     <div class="row">
       <div class="col c12">
